--- a/mlflow_for_ml_dev/notebooks/traditional_ml_evaluation/1_2_custom_metrics.ipynb
+++ b/mlflow_for_ml_dev/notebooks/traditional_ml_evaluation/1_2_custom_metrics.ipynb
@@ -9,7 +9,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "\n",
+    "def find_project_root(marker=\"pyproject.toml\"):\n",
+    "    p = Path().resolve()\n",
+    "    for parent in [p, *p.parents]:\n",
+    "        if (parent / marker).exists():\n",
+    "            return parent\n",
+    "    raise RuntimeError(\"Could not find project root\")\n",
+    "\n",
+    "PROJECT_ROOT = find_project_root()\n",
+    "sys.path.append(str(PROJECT_ROOT))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +99,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "predictions",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "targets",
+         "rawType": "int64",
+         "type": "integer"
+        }
+       ],
+       "ref": "85c40908-b7ca-453d-afd1-f67a4ad9c43f",
+       "rows": [
+        [
+         "0",
+         "0",
+         "1"
+        ],
+        [
+         "1",
+         "1",
+         "1"
+        ],
+        [
+         "2",
+         "1",
+         "1"
+        ],
+        [
+         "3",
+         "1",
+         "1"
+        ],
+        [
+         "4",
+         "0",
+         "1"
+        ]
+       ],
+       "shape": {
+        "columns": 2,
+        "rows": 5
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>predictions</th>\n",
+       "      <th>targets</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   predictions  targets\n",
+       "0            0        1\n",
+       "1            1        1\n",
+       "2            1        1\n",
+       "3            1        1\n",
+       "4            0        1"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "test_df = pd.DataFrame({\n",
     "    \"predictions\": [random.randint(0, 1) for _ in range(100)],\n",
@@ -99,16 +239,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.47"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "custom_accuracy(test_df[\"predictions\"], test_df[\"targets\"], {})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,10 +302,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "2025/12/05 14:23:37 WARNING mlflow.models.evaluation.evaluators.classifier: According to the evaluation dataset label values, the model type looks like None, but you specified model type 'classifier'. Please verify that you set the `model_type` and `dataset` arguments correctly.\n",
+      "2025/12/05 14:23:37 INFO mlflow.models.evaluation.evaluators.classifier: The evaluation dataset is inferred as binary dataset, positive label is 1, negative label is 0.\n",
+      "2025/12/05 14:23:37 INFO mlflow.models.evaluation.default_evaluator: Testing metrics on first row...\n",
+      "2025/12/05 14:23:37 WARNING mlflow.models.evaluation.evaluators.shap: SHAP or matplotlib package is not installed, so model explainability insights will not be logged.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 1050x700 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# we can provide multiple custom metrics as a list to extra_metrics\n",
     "results = mlflow.evaluate(\n",
     "    data=test_df,\n",
     "    model_type=\"classifier\",\n",
@@ -168,8 +342,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'true_negatives': 21,\n",
+       " 'false_positives': 15,\n",
+       " 'false_negatives': 38,\n",
+       " 'true_positives': 26,\n",
+       " 'example_count': 100,\n",
+       " 'accuracy_score': 0.47,\n",
+       " 'recall_score': 0.40625,\n",
+       " 'precision_score': 0.6341463414634146,\n",
+       " 'f1_score': 0.49523809523809526,\n",
+       " 'custom_accuracy/v0.0.1': 0.47}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# together with the default metrics, mlflow will log our custom metric\n",
     "results.metrics"
    ]
   },
@@ -182,13 +377,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def good_enough(predictions:pd.Series, targets:pd.Series, metrics:Dict[str, MetricValue])->Union[float, MetricValue]:\n",
     "    \"\"\"\n",
-    "    Custom accuracy metric\n",
+    "    Custom accuracy metric. Through metrics Dict we can access all metrics computed during evaluation.\n",
     "\n",
     "    :param predictions: The predictions of the model\n",
     "    :param targets: The target values\n",
@@ -214,9 +409,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "2025/12/05 14:28:52 WARNING mlflow.models.evaluation.evaluators.classifier: According to the evaluation dataset label values, the model type looks like None, but you specified model type 'classifier'. Please verify that you set the `model_type` and `dataset` arguments correctly.\n",
+      "2025/12/05 14:28:52 INFO mlflow.models.evaluation.evaluators.classifier: The evaluation dataset is inferred as binary dataset, positive label is 1, negative label is 0.\n",
+      "2025/12/05 14:28:52 INFO mlflow.models.evaluation.default_evaluator: Testing metrics on first row...\n",
+      "2025/12/05 14:28:52 WARNING mlflow.models.evaluation.evaluators.shap: SHAP or matplotlib package is not installed, so model explainability insights will not be logged.\n"
+     ]
+    }
+   ],
    "source": [
     "results = mlflow.evaluate(\n",
     "    data=test_df,\n",
@@ -229,9 +437,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'true_negatives': 21,\n",
+       " 'false_positives': 15,\n",
+       " 'false_negatives': 38,\n",
+       " 'true_positives': 26,\n",
+       " 'example_count': 100,\n",
+       " 'accuracy_score': 0.47,\n",
+       " 'recall_score': 0.40625,\n",
+       " 'precision_score': 0.6341463414634146,\n",
+       " 'f1_score': 0.49523809523809526,\n",
+       " 'custom_accuracy/v0.0.1': 0.47,\n",
+       " 'good_enough/v0.0.1': 0}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results.metrics "
    ]
@@ -257,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,9 +524,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\dragu\\Documents\\GIT\\mlflow_for_ml_dev_tutorial\\.venv\\Lib\\site-packages\\mlflow\\types\\utils.py:452: UserWarning: Hint: Inferred schema contains integer column(s). Integer columns in Python cannot represent missing values. If your input data contains missing values at inference time, it will be encoded as floats and will cause a schema enforcement error. The best way to avoid this problem is to infer the model schema based on a realistic data sample (training dataset) that includes missing values. Alternatively, you can declare integer columns as doubles (float64) whenever these columns may have missing values. See `Handling Integers With Missing Values <https://www.mlflow.org/docs/latest/models.html#handling-integers-with-missing-values>`_ for more details.\n",
+      "  warnings.warn(\n",
+      "2025/12/05 14:39:46 WARNING mlflow.models.evaluation.evaluators.classifier: According to the evaluation dataset label values, the model type looks like None, but you specified model type 'classifier'. Please verify that you set the `model_type` and `dataset` arguments correctly.\n",
+      "2025/12/05 14:39:46 INFO mlflow.models.evaluation.evaluators.classifier: The evaluation dataset is inferred as binary dataset, positive label is 1, negative label is 0.\n",
+      "2025/12/05 14:39:46 INFO mlflow.models.evaluation.default_evaluator: Testing metrics on first row...\n",
+      "2025/12/05 14:39:46 WARNING mlflow.models.evaluation.evaluators.shap: SHAP or matplotlib package is not installed, so model explainability insights will not be logged.\n"
+     ]
+    }
+   ],
    "source": [
     "results = mlflow.evaluate(\n",
     "    data=test_df,\n",
@@ -310,19 +552,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'true_negatives': 21,\n",
+       " 'false_positives': 15,\n",
+       " 'false_negatives': 38,\n",
+       " 'true_positives': 26,\n",
+       " 'example_count': 100,\n",
+       " 'accuracy_score': 0.47,\n",
+       " 'recall_score': 0.40625,\n",
+       " 'precision_score': 0.6341463414634146,\n",
+       " 'f1_score': 0.49523809523809526,\n",
+       " 'custom_accuracy/v0.0.1': 0.47,\n",
+       " 'good_enough/v0.0.1': 0,\n",
+       " 'random_metric/v0.0.1': 0.10663636365324469}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results.metrics"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -341,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
